--- a/v2/1/05/index.html
+++ b/v2/1/05/index.html
@@ -60,7 +60,7 @@
                     &nbsp; &nbsp; middle &larr; (left + right) / <span class="number">2</span> <br />
                     &nbsp; &nbsp; <span class="keyword">IF</span> list[middle] = item <span class="keyword">THEN</span> <br />
                     &nbsp; &nbsp; &nbsp; <span class="function">RETURN</span> middle <br />
-                    &nbsp; &nbsp; <span class="keyword">ELSE IF</span> list[middle] < item <span class="keyword">THEN</span> <br />
+                    &nbsp; &nbsp; <span class="keyword">ELSE IF</span> list[middle] > item <span class="keyword">THEN</span> <br />
                     &nbsp; &nbsp; &nbsp; right &larr; middle - <span class="number">1</span> <br />
                     &nbsp; &nbsp; <span class="keyword">ELSE</span> <br />
                     &nbsp; &nbsp; &nbsp; left &larr; middle + <span class="number">1</span> <br />
