--- a/v2/1/05/index.html
+++ b/v2/1/05/index.html
@@ -57,7 +57,7 @@
                     &nbsp; left &larr; <span class="number">0</span> <br />
                     &nbsp; right &larr; <span class="other">LEN</span>(list) - <span class="number">1</span> <br />
                     &nbsp; <span class="keyword">WHILE</span> left &le; right <br />
-                    &nbsp; &nbsp; middle &larr; (left + right) / <span class="number">2</span> <br />
+                    &nbsp; &nbsp; middle &larr; (left + right) <span class="other">DIV</span> <span class="number">2</span> <br />
                     &nbsp; &nbsp; <span class="keyword">IF</span> list[middle] = item <span class="keyword">THEN</span> <br />
                     &nbsp; &nbsp; &nbsp; <span class="function">RETURN</span> middle <br />
                     &nbsp; &nbsp; <span class="keyword">ELSE IF</span> list[middle] > item <span class="keyword">THEN</span> <br />
