--- a/v2/16/index.html
+++ b/v2/16/index.html
@@ -46,6 +46,12 @@
                         <p>Searching and Sorting Algorithms</p>
                     </a>
                 </div>
+                <div class="section-flexbox">
+                    <a href="./05/" class="no-underline section-link">
+                        <h1>16.05</h1>
+                        <p>Dijkstra's Shortest Path</p>
+                    </a>
+                </div>
             </div>
             <div id="margin"></div>
         </div>
