New Communication section

--- a/v2/index.html
+++ b/v2/index.html
@@ -108,7 +108,7 @@
                         <p>Computer Architecture <br /> <em>(in progress)</em></p>
                     </a>
                 </div>
-                <div class="section-flexbox homepage-flexbox disabled">
+                <div class="section-flexbox homepage-flexbox">
                     <a href="./14/" class="no-underline section-link">
                         <h1>Section 14</h1>
                         <p>Communication <br /> <em>(in progress)</em></p>
