New Questions page

--- a/v2/11/qs/index.html
+++ b/v2/11/qs/index.html
@@ -14,7 +14,7 @@
         <meta http-equiv="content-type" content="text/html; charset=utf-8">
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Revise Section 11 (Data Representation) with exam-style GCSE Computer Science questions on CS.RN v2.">
+        <meta name="description" content="Revise Section 11 (Data Representation) with exam-style A Level Computer Science questions on CS.RN v2.">
     </head>
 
     <body>
