--- a/v2/index.html
+++ b/v2/index.html
@@ -147,7 +147,7 @@
                 <div class="section-flexbox homepage-flexbox disabled">
                     <a href="./20/" class="no-underline section-link">
                         <h1>Section 20</h1>
-                        <p>Object-Oriented Programming <br /> <em>(in progress)</em></p>
+                        <p>Miscellaneous Topics <br /> <em>(in progress)</em></p>
                     </a>
                 </div>
             </div>
