Update Exam Info

--- a/v2/exam-info/index.html
+++ b/v2/exam-info/index.html
@@ -23,7 +23,7 @@
         <div id="page">
             <p>This page contains details about the AQA GCSE and A Level Computer Science examinations. <br /> &nbsp;</p>
             <h1>GCSE (8525)</h1>
-            <p><a href="https://www.aqa.org.uk/subjects/computer-science-and-it/gcse/computer-science-8525" target="_blank">AQA Website</a></p>
+            <p><a href="https://www.aqa.org.uk/subjects/computer-science/gcse/computer-science-8525" target="_blank">AQA Website</a></p>
             <p>
                 The GCSE part of this revision guide follows the AQA specification's chapters exactly.
                 Section 1 in this revision guide is AQA's Section 3.1, Section 2 is Section 3.2, etc.
@@ -43,23 +43,23 @@
                 Computing). <br /> &nbsp;
             </p>
             <h1>A Level (7517)</h1>
-            <p><a href="https://www.aqa.org.uk/subjects/computer-science-and-it/as-and-a-level/computer-science-7516-7517" target="_blank">AQA Website</a></p>
+            <p><a href="https://www.aqa.org.uk/subjects/computer-science/a-level/computer-science-7517" target="_blank">AQA Website</a></p>
             <p>
                 The A Level part of this revision guide does not exactly follow the AQA specification's chapters.
-                Sections 9-10 and 15-16 in this revision guide correspond to AQA's Sections 10-13, and Sections 11-14
-                and 17-20 correspond to AQA's Sections 14-22. AQA's Section 23 (the NEA) is not covered in this revision guide.
+                See the below image to see how our sections (along the left) map to AQA's chapters (across the top):
             </p>
-            <h2>Paper 1</h2>
+            <img src="./spec-map.png" width="700px" />
+            <h2>Paper 1 (Programming)</h2>
             <p>This paper is a 100 marks, 150 minutes on-screen exam. Calculators are prohibited.</p>
             <p>
                 A Level Paper 1 is basically the same as GCSE Paper 1, except that it is slightly harder (with some
-                additional theory of programming content from Sections 9-10 and 15-16) and is done on a computer. 
+                additional theory of programming content from Sections 9-10 and 15-17) and is done on a computer. 
             </p>
-            <h2>Paper 2</h2>
+            <h2>Paper 2 (Theory)</h2>
             <p>This paper is a 100 marks, 150 minutes written exam. Calculators are allowed.</p>
             <p>
                 A Level Paper 2 is basically the same as GCSE Paper 2, but there is some additional content in Sections
-                11-14 and 17-20. No programming is required in this paper, except SQL in Section 19.
+                11-14 and 18-20. No programming is required in this paper, except SQL in Section 19.
             </p>
             <h2>Non-Exam Assessment (NEA)</h2>
             <p>This is a 75 marks practical component.</p>
