--- a/v2/exam-info/index.html
+++ b/v2/exam-info/index.html
@@ -48,7 +48,7 @@
                 The A Level part of this revision guide does not exactly follow the AQA specification's chapters.
                 See the below image to see how our sections (along the left) map to AQA's chapters (across the top):
             </p>
-            <img src="./spec-map.png" width="700px" />
+            <p><a href="./spec-map.png" target="_blank"><img src="./spec-map.png" width="700px" /></a></p>
             <h2>Paper 1 (Programming)</h2>
             <p>This paper is a 100 marks, 150 minutes on-screen exam. Calculators are prohibited.</p>
             <p>
