Fix image widths

--- a/v2/1/05/index.html
+++ b/v2/1/05/index.html
@@ -33,7 +33,7 @@
             <p class="diagram">
                 <img src="../../icons/image.svg" class="icon" />
                 Diagram 1 <br /> <br />
-                <img src="./diagram.png" width="250px" />
+                <img src="./diagram.png" style="width: 250px;" />
             </p>
     
             <p>
