--- a/v2/11/06/index.html
+++ b/v2/11/06/index.html
@@ -68,7 +68,7 @@
             <ul class="spaced-out less-padding-left">
                 <li>
                     <b>Step 1</b>: Convert the number into fixed-point binary, using the same number of bits as the mantissa. <br /> <br />
-                    <img src="./diagram.png" width="300px" />
+                    <img src="./diagram.png" style="width: 300px;" />
                     <p>Note: because the mantissa is 8 bits long, we added an extra 0 at the end.</p>
                 </li>
                 <li>
