--- a/v2/11/11/index.html
+++ b/v2/11/11/index.html
@@ -64,7 +64,7 @@
             <p class="diagram">
                 <img src="../../icons/image.svg" class="icon" />
                 Diagram 1 <br /> <br />
-                <img src="./diagram1.png" width="750px" />
+                <img src="./diagram1.png" style="width: 750px;" />
             </p>
 
             <p>You can try out the Vernam cipher <a href="https://misc.rujulnayak.com/Vernam-Cipher/" target="_blank">here</a>.</p>
