--- a/v2/14/02/index.html
+++ b/v2/14/02/index.html
@@ -38,7 +38,7 @@
                 <img src="../../icons/image.svg" class="icon" />
                 Diagram 1 <br /> <br />
                 <div style="width: 400px; height: 150px; overflow: hidden;">
-                    <img src="./serial.gif" width="500px" style="filter: brightness(1.1); margin: -80px -50px;" />
+                    <img src="./serial.gif" style="width: 500px; filter: brightness(1.1); margin: -80px -50px;" />
                 </div>
             </p>
 
