--- a/v2/14/03/index.html
+++ b/v2/14/03/index.html
@@ -42,7 +42,7 @@
             <p class="diagram">
                 <img src="../../icons/image.svg" class="icon" />
                 Diagram 1 <br /> <br />
-                <img src="./diagram1.png" width="600px" />
+                <img src="./diagram1.png" style="width: 600px;" />
             </p>
 
             <p class="definition">
@@ -62,7 +62,7 @@
             <p class="diagram">
                 <img src="../../icons/image.svg" class="icon" />
                 Diagram 2 <br /> <br />
-                <img src="./diagram2.png" width="700px" />
+                <img src="./diagram2.png" style="width: 700px;" />
             </p>
 
             <p class="definition">
