--- a/v2/14/04/index.html
+++ b/v2/14/04/index.html
@@ -30,7 +30,7 @@
             <p class="diagram">
                 <img src="../../icons/image.svg" class="icon" />
                 Diagram 1 <br /> <br />
-                <img src="./bus.png" width="500px" />
+                <img src="./bus.png" style="width: 500px;" />
             </p>
 
             <p>Diagram 2 shows a star topology.</p>
@@ -38,7 +38,7 @@
             <p class="diagram">
                 <img src="../../icons/image.svg" class="icon" />
                 Diagram 2 <br /> <br />
-                <img src="./star.png" width="500px" />
+                <img src="./star.png" style="width: 500px;" />
             </p>
 
             <p><br />
