--- a/v2/14/07/index.html
+++ b/v2/14/07/index.html
@@ -51,7 +51,7 @@
             <p class="diagram">
                 <img src="../../icons/image.svg" class="icon" />
                 Diagram 1 <br /> <br />
-                <img src="./diagram1.png" width="500px" />
+                <img src="./diagram1.png" style="width: 500px;" />
             </p>
 
             <p class="definition">
@@ -79,7 +79,7 @@
     
             <p class="summary-question">
                 <span class="answer">
-                    <img src="./diagram2.png" width="300px" />
+                    <img src="./diagram2.png" style="width: 300px;" />
                 </span>
             </p>
 
