--- a/v2/15/qs/index.html
+++ b/v2/15/qs/index.html
@@ -74,7 +74,7 @@
                         <p class="diagram">
                             <img src="../../icons/image.svg" class="icon" />
                             Diagram 1 <br /> <br />
-                            <img src="./diagram1.png" width="500px" />
+                            <img src="./diagram1.png" style="width: 500px;" />
                         </p>
                     </span>
                     <span class="question">Explain why the graph in Diagram 1 is not a tree.</span>
@@ -86,7 +86,7 @@
                         <p class="diagram">
                             <img src="../../icons/image.svg" class="icon" />
                             Diagram 1 <br /> <br />
-                            <img src="./diagram1.png" width="500px" />
+                            <img src="./diagram1.png" style="width: 500px;" />
                         </p>
                     </span>
                     <span class="question">State the output of a breadth-first traversal of Diagram 1 from E, visiting neighbours in alphabetical order.</span>
