--- a/v2/16/qs/index.html
+++ b/v2/16/qs/index.html
@@ -33,7 +33,7 @@
                         <p class="diagram">
                             <img src="../../icons/image.svg" class="icon" />
                             Diagram 1 <br /> <br />
-                            <img src="./diagram1.png" width="500px" />
+                            <img src="./diagram1.png" style="width: 500px;" />
                         </p>
                     </span>
                     <span class="question">State the output of a breadth-first traversal of Diagram 1 from E, visiting neighbours in alphabetical order.</span>
@@ -45,7 +45,7 @@
                         <p class="diagram">
                             <img src="../../icons/image.svg" class="icon" />
                             Diagram 2 <br /> <br />
-                            <img src="./diagram2.png" width="300px" />
+                            <img src="./diagram2.png" style="width: 300px;" />
                         </p>
                     </span>
                     <span class="question">State the output of a post-order traversal of this tree, and explain what it represents.</span>
