--- a/v2/3/09/index.html
+++ b/v2/3/09/index.html
@@ -60,7 +60,7 @@
             <p class="diagram">
                 <img src="../../icons/image.svg" class="icon" />
                 Diagram 1 <br /> <br />
-                <img src="./logo-small.png" class="img-render" width="200px" />
+                <img src="./logo-small.png" class="img-render" style="width: 200px;" />
             </p>
     
             <p>With <code>0</code> representing black and <code class="comment">1</code> representing white, the uncompressed data would look like this (<b>70 bits</b>):</p>
