--- a/v2/3/10/index.html
+++ b/v2/3/10/index.html
@@ -44,7 +44,7 @@
             <p class="diagram">
                 <img src="../../icons/image.svg" class="icon" />
                 Diagram 1 <br /> <br />
-                <img src="./diagram.png" width="400px" />
+                <img src="./diagram.png" style="width: 400px;" />
             </p>
     
             <p>
