--- a/v2/5/03/index.html
+++ b/v2/5/03/index.html
@@ -33,7 +33,7 @@
             <p class="diagram">
                 <img src="../../icons/image.svg" class="icon" />
                 Diagram 1 <br /> <br />
-                <img src="./bus.png" width="500px" />
+                <img src="./bus.png" style="width: 500px;" />
             </p>
     
             <p>
@@ -47,7 +47,7 @@
             <p class="diagram">
                 <img src="../../icons/image.svg" class="icon" />
                 Diagram 2 <br /> <br />
-                <img src="./star.png" width="500px" />
+                <img src="./star.png" style="width: 500px;" />
             </p>
     
             <p>
