--- a/v2/9/07/index.html
+++ b/v2/9/07/index.html
@@ -55,7 +55,7 @@
                 <img src="../../icons/image.svg" class="icon" />
                 Diagram 1 <br /> <br />
                 <img src="../../icons/left.svg" class="no-zoom" id="js-target-1" height="32px" style="cursor: pointer;" />
-                <img src="./Slide1.png" id="js-target-0" width="750px" />
+                <img src="./Slide1.png" id="js-target-0" style="width: 750px;" />
                 <img src="../../icons/right.svg" class="no-zoom" id="js-target-2" height="32px" style="cursor: pointer;" />
             </p>
 
