--- a/v2/1/07/index.html
+++ b/v2/1/07/index.html
@@ -53,9 +53,9 @@
             <p class="diagram">
                 <img src="../../icons/image.svg" class="icon" />
                 Diagram 1 <br /> <br />
-                <img src="./diagram1.png" width="250px" />
+                <img src="./diagram1.png" style="width: 250px;" />
                 <br /> <br />
-                <img src="./diagram2.png" width="250px" />
+                <img src="./diagram2.png" style="width: 250px;" />
             </p>
 
             <p><br />Example 1 shows an implementation of bubble sort in pseudo-code.</p>
