--- a/v2/11/05/index.html
+++ b/v2/11/05/index.html
@@ -41,7 +41,7 @@
             <p class="diagram">
                 <img src="../../icons/image.svg" class="icon" />
                 Diagram 1 <br /> <br />
-                <img src="./diagram.png" width="500px" />
+                <img src="./diagram.png" style="width: 500px;" />
             </p>
 
             <br />
