--- a/v2/14/01/index.html
+++ b/v2/14/01/index.html
@@ -58,7 +58,7 @@
             <p class="diagram">
                 <img src="../../icons/image.svg" class="icon" />
                 Diagram 1 <br /> <br />
-                <img src="./diagram1.png" width="500px" />
+                <img src="./diagram1.png" style="width: 500px;" />
             </p>
 
             <p>
