--- a/v2/16/03/index.html
+++ b/v2/16/03/index.html
@@ -42,9 +42,9 @@
             <p class="diagram">
                 <img src="../../icons/image.svg" class="icon" />
                 Diagram 1 <br /> <br />
-                <img src="../../icons/left.svg" class="no-zoom" id="js-target-d1" height="32px" style="cursor: pointer; filter: invert(40%) sepia(91%) saturate(1234%) hue-rotate(220deg) brightness(100%) contrast(93%); border: 3px solid; border-radius: 50%; padding: 0px 8px;" />
-                <img src="./df/Slide1.png" id="js-target-d0" width="1000px" style="max-width: calc(70vw - 10px);" />
-                <img src="../../icons/right.svg" class="no-zoom" id="js-target-d2" height="32px" style="cursor: pointer; filter: invert(40%) sepia(91%) saturate(1234%) hue-rotate(220deg) brightness(100%) contrast(93%); border: 3px solid; border-radius: 50%; padding: 0px 8px;" />
+                <img src="../../icons/left.svg" class="no-zoom" id="js-target-d1" style="height: 32px; cursor: pointer; filter: invert(40%) sepia(91%) saturate(1234%) hue-rotate(220deg) brightness(100%) contrast(93%); border: 3px solid; border-radius: 50%; padding: 0px 8px;" />
+                <img src="./df/Slide1.png" id="js-target-d0" style="width: 1000px; max-width: calc(70vw - 10px);" />
+                <img src="../../icons/right.svg" class="no-zoom" id="js-target-d2" style="height: 32px; cursor: pointer; filter: invert(40%) sepia(91%) saturate(1234%) hue-rotate(220deg) brightness(100%) contrast(93%); border: 3px solid; border-radius: 50%; padding: 0px 8px;" />
             </p>
 
             <p>
@@ -65,9 +65,9 @@
             <p class="diagram">
                 <img src="../../icons/image.svg" class="icon" />
                 Diagram 2 <br /> <br />
-                <img src="../../icons/left.svg" class="no-zoom" id="js-target-b1" height="32px" style="cursor: pointer; filter: invert(40%) sepia(91%) saturate(1234%) hue-rotate(220deg) brightness(100%) contrast(93%); border: 3px solid; border-radius: 50%; padding: 0px 8px;" />
-                <img src="./bf/Slide1.png" id="js-target-b0" width="1000px" style="max-width: calc(70vw - 10px);" />
-                <img src="../../icons/right.svg" class="no-zoom" id="js-target-b2" height="32px" style="cursor: pointer; filter: invert(40%) sepia(91%) saturate(1234%) hue-rotate(220deg) brightness(100%) contrast(93%); border: 3px solid; border-radius: 50%; padding: 0px 8px;" />
+                <img src="../../icons/left.svg" class="no-zoom" id="js-target-b1" style="height: 32px; cursor: pointer; filter: invert(40%) sepia(91%) saturate(1234%) hue-rotate(220deg) brightness(100%) contrast(93%); border: 3px solid; border-radius: 50%; padding: 0px 8px;" />
+                <img src="./bf/Slide1.png" id="js-target-b0" style="width: 1000px; max-width: calc(70vw - 10px);" />
+                <img src="../../icons/right.svg" class="no-zoom" id="js-target-b2" style="height: 32px; cursor: pointer; filter: invert(40%) sepia(91%) saturate(1234%) hue-rotate(220deg) brightness(100%) contrast(93%); border: 3px solid; border-radius: 50%; padding: 0px 8px;" />
             </p>
 
             <p>
