--- a/v2/19/04/index.html
+++ b/v2/19/04/index.html
@@ -50,7 +50,7 @@
             <p class="diagram">
                 <img src="../../icons/image.svg" class="icon" />
                 Diagram 1 <br /> <br />
-                <img src="./diagram1.png" width="500px" />
+                <img src="./diagram1.png" style="width: 500px;" />
             </p>
 
             <p>
@@ -63,9 +63,9 @@
             <p class="diagram">
                 <img src="../../icons/image.svg" class="icon" />
                 Diagram 2 <br /> <br />
-                <img src="../../icons/left.svg" class="no-zoom" id="js-target-1" height="32px" style="cursor: pointer; filter: invert(40%) sepia(91%) saturate(1234%) hue-rotate(220deg) brightness(100%) contrast(93%); border: 3px solid; border-radius: 50%; padding: 0px 8px;" />
-                <img src="./diagram2/Slide1.png" id="js-target-0" width="650px" style="max-width: calc(70vw - 10px);" />
-                <img src="../../icons/right.svg" class="no-zoom" id="js-target-2" height="32px" style="cursor: pointer; filter: invert(40%) sepia(91%) saturate(1234%) hue-rotate(220deg) brightness(100%) contrast(93%); border: 3px solid; border-radius: 50%; padding: 0px 8px;" />
+                <img src="../../icons/left.svg" class="no-zoom" id="js-target-1" style="height: 32px; cursor: pointer; filter: invert(40%) sepia(91%) saturate(1234%) hue-rotate(220deg) brightness(100%) contrast(93%); border: 3px solid; border-radius: 50%; padding: 0px 8px;" />
+                <img src="./diagram2/Slide1.png" id="js-target-0" style="width: 650px; max-width: calc(70vw - 10px);" />
+                <img src="../../icons/right.svg" class="no-zoom" id="js-target-2" style="height: 32px; cursor: pointer; filter: invert(40%) sepia(91%) saturate(1234%) hue-rotate(220deg) brightness(100%) contrast(93%); border: 3px solid; border-radius: 50%; padding: 0px 8px;" />
             </p>
 
             <p><br />
@@ -80,9 +80,9 @@
             <p class="diagram">
                 <img src="../../icons/image.svg" class="icon" />
                 Diagram 3 <br /> <br />
-                <img src="../../icons/left.svg" class="no-zoom" id="js-target-4" height="32px" style="cursor: pointer; filter: invert(40%) sepia(91%) saturate(1234%) hue-rotate(220deg) brightness(100%) contrast(93%); border: 3px solid; border-radius: 50%; padding: 0px 8px;" />
-                <img src="./diagram3/Slide1.png" id="js-target-3" width="650px" style="max-width: calc(70vw - 10px);" />
-                <img src="../../icons/right.svg" class="no-zoom" id="js-target-5" height="32px" style="cursor: pointer; filter: invert(40%) sepia(91%) saturate(1234%) hue-rotate(220deg) brightness(100%) contrast(93%); border: 3px solid; border-radius: 50%; padding: 0px 8px;" />
+                <img src="../../icons/left.svg" class="no-zoom" id="js-target-4" style="height: 32px; cursor: pointer; filter: invert(40%) sepia(91%) saturate(1234%) hue-rotate(220deg) brightness(100%) contrast(93%); border: 3px solid; border-radius: 50%; padding: 0px 8px;" />
+                <img src="./diagram3/Slide1.png" id="js-target-3" style="width: 650px; max-width: calc(70vw - 10px);" />
+                <img src="../../icons/right.svg" class="no-zoom" id="js-target-5" style="height: 32px; cursor: pointer; filter: invert(40%) sepia(91%) saturate(1234%) hue-rotate(220deg) brightness(100%) contrast(93%); border: 3px solid; border-radius: 50%; padding: 0px 8px;" />
             </p>
 
             <p><br />
