--- a/v2/2/04/index.html
+++ b/v2/2/04/index.html
@@ -43,7 +43,7 @@
             <p class="diagram">
                 <img src="../../icons/image.svg" class="icon" />
                 Diagram 1 <br /> <br />
-                <img src="./diagram.png" width="500px" />
+                <img src="./diagram.png" style="width: 500px;" />
             </p>
     
             <p>Table 1 shows the string manipulation functions in pseudo-code.</p>
