--- a/v2/9/07/index.html
+++ b/v2/9/07/index.html
@@ -55,7 +55,7 @@
                 <img src="../../icons/image.svg" class="icon" />
                 Diagram 1 <br /> <br />
                 <img src="../../icons/left.svg" class="no-zoom" id="js-target-1" style="height: 32px; cursor: pointer; filter: invert(40%) sepia(91%) saturate(1234%) hue-rotate(220deg) brightness(100%) contrast(93%); border: 3px solid; border-radius: 50%; padding: 0px 8px;" />
-                <img src="./Slide1.png" id="js-target-0" style="width: 750px;" />
+                <img src="./Slide1.png" id="js-target-0" style="width: 750px; max-width: calc(70vw - 10px);" />
                 <img src="../../icons/right.svg" class="no-zoom" id="js-target-2" style="height: 32px; cursor: pointer; filter: invert(40%) sepia(91%) saturate(1234%) hue-rotate(220deg) brightness(100%) contrast(93%); border: 3px solid; border-radius: 50%; padding: 0px 8px;" />
             </p>
 
