Procedural Programming page

--- a/v2/9/index.html
+++ b/v2/9/index.html
@@ -64,6 +64,12 @@
                         <p>Recursion</p>
                     </a>
                 </div>
+                <div class="section-flexbox">
+                    <a href="./08/" class="no-underline section-link">
+                        <h1>9.08</h1>
+                        <p>Procedural Programming</p>
+                    </a>
+                </div>
             </div>
             <div id="margin"></div>
         </div>
