--- a/v2/9/index.html
+++ b/v2/9/index.html
@@ -70,6 +70,12 @@
                         <p>Procedural Programming</p>
                     </a>
                 </div>
+                <div class="section-flexbox">
+                    <a href="./09/" class="no-underline section-link">
+                        <h1>9.09</h1>
+                        <p>Object-Oriented Programming</p>
+                    </a>
+                </div>
             </div>
             <div id="margin"></div>
         </div>
