--- a/v2/9/index.html
+++ b/v2/9/index.html
@@ -76,6 +76,12 @@
                         <p>Object-Oriented Programming</p>
                     </a>
                 </div>
+                <div class="section-flexbox">
+                    <a href="./10/" class="no-underline section-link">
+                        <h1>9.10</h1>
+                        <p>Inheritance</p>
+                    </a>
+                </div>
             </div>
             <div id="margin"></div>
         </div>
