--- a/v2/9/index.html
+++ b/v2/9/index.html
@@ -82,6 +82,12 @@
                         <p>Inheritance</p>
                     </a>
                 </div>
+                <div class="section-flexbox">
+                    <a href="./11/" class="no-underline section-link">
+                        <h1>9.11</h1>
+                        <p>Information Hiding</p>
+                    </a>
+                </div>
             </div>
             <div id="margin"></div>
         </div>
