--- a/v2/index.html
+++ b/v2/index.html
@@ -84,7 +84,7 @@
                         <p>Programming <br /> <em>(in progress)</em></p>
                     </a>
                 </div>
-                <div class="section-flexbox homepage-flexbox disabled">
+                <div class="section-flexbox homepage-flexbox">
                     <a href="./10/" class="no-underline section-link">
                         <h1>Section 10</h1>
                         <p>Problem Solving <br /> <em>(in progress)</em></p>
