--- a/v2/10/01/index.html
+++ b/v2/10/01/index.html
@@ -54,8 +54,8 @@
                 Because most of the clues use statements like <b>"If A, then B"</b> (which we can write as
                 <b>"A implies B"</b> or <code>A &Implies; B</code>), we can use the <b>contrapositive</b> (<b>"not B
                 implies not A"</b>, or <code>B&prime; &Implies; A&prime;</code>) which is <b>logically equivalent</b>
-                to the original statement. For example, for clue 5, we can use "If the thief did <b>not</b> leave using
-                the main exit, then Carl was <b>not</b> in the storage room before the theft".
+                to the original statement. For example, for clue 4, we can use "If Alice <b>was</b> in the lobby,
+                then Carl did <b>not</b> steal the jewel".
                 <br /> &nbsp;
             </details>
     
