Two more problem solving pages

--- a/v2/10/index.html
+++ b/v2/10/index.html
@@ -28,6 +28,18 @@
                         <p>Logic Puzzles</p>
                     </a>
                 </div>
+                <div class="section-flexbox">
+                    <a href="./02/" class="no-underline section-link">
+                        <h1>10.02</h1>
+                        <p>Abstraction</p>
+                    </a>
+                </div>
+                <div class="section-flexbox">
+                    <a href="./03/" class="no-underline section-link">
+                        <h1>10.03</h1>
+                        <p>Decomposition</p>
+                    </a>
+                </div>
             </div>
             <div id="margin"></div>
         </div>
