--- a/v2/index.html
+++ b/v2/index.html
@@ -126,7 +126,7 @@
                         <p>Algorithms <br /> <em>(in progress)</em></p>
                     </a>
                 </div>
-                <div class="section-flexbox homepage-flexbox disabled">
+                <div class="section-flexbox homepage-flexbox">
                     <a href="./17/" class="no-underline section-link">
                         <h1>Section 17</h1>
                         <p>Regular Languages <br /> <em>(in progress)</em></p>
