--- a/v2/17/index.html
+++ b/v2/17/index.html
@@ -28,6 +28,12 @@
                         <p>Finite State Machines</p>
                     </a>
                 </div>
+                <div class="section-flexbox">
+                    <a href="./02/" class="no-underline section-link">
+                        <h1>17.02</h1>
+                        <p>Basics of Sets</p>
+                    </a>
+                </div>
             </div>
             <div id="margin"></div>
         </div>
