Add another page

--- a/v2/17/index.html
+++ b/v2/17/index.html
@@ -34,6 +34,12 @@
                         <p>Basics of Sets</p>
                     </a>
                 </div>
+                <div class="section-flexbox">
+                    <a href="./03/" class="no-underline section-link">
+                        <h1>17.03</h1>
+                        <p>Set Operations</p>
+                    </a>
+                </div>
             </div>
             <div id="margin"></div>
         </div>
