--- a/v2/17/index.html
+++ b/v2/17/index.html
@@ -40,6 +40,12 @@
                         <p>Set Operations</p>
                     </a>
                 </div>
+                <div class="section-flexbox">
+                    <a href="./04/" class="no-underline section-link">
+                        <h1>17.04</h1>
+                        <p>Regular Expressions</p>
+                    </a>
+                </div>
             </div>
             <div id="margin"></div>
         </div>
