Context-Free Languages

--- a/v2/17/index.html
+++ b/v2/17/index.html
@@ -46,6 +46,12 @@
                         <p>Regular Expressions</p>
                     </a>
                 </div>
+                <div class="section-flexbox">
+                    <a href="./05/" class="no-underline section-link">
+                        <h1>17.05</h1>
+                        <p>Context-Free Languages</p>
+                    </a>
+                </div>
             </div>
             <div id="margin"></div>
         </div>
