--- a/v2/9/11/index.html
+++ b/v2/9/11/index.html
@@ -14,7 +14,7 @@
         <meta http-equiv="content-type" content="text/html; charset=utf-8">
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Study how private, protected and public access modifiers can be used in Object Oriented Programming for A Level Computer Science on CS.RN v2.">
+        <meta name="description" content="Study how private, protected and public access modifiers can be used in Object-Oriented Programming for A Level Computer Science on CS.RN v2.">
     </head>
 
     <body>
@@ -87,9 +87,18 @@
             </p>
 
             <p>
-                Unless explicitly stated, all attributes (variables) should be <span class="keyword">private</span>,
-                with separate <span class="keyword">public</span> or <span class="keyword">protected</span>
+                Unless explicitly stated, all attributes (variables) should be <code class="keyword">private</code>,
+                with separate <code class="keyword">public</code> or <code class="keyword">protected</code>
                 <code class="other">Get</code> and <code class="other">Set</code> methods if required.
+            </p>
+
+            <p><br />
+                A <b>static method</b> is one which can be used <b>without instantiating the class</b> that it is part of.
+                For example: the <code><span class="function">WriteLine</span>()</code> method of the
+                <code class="other">Console</code> class (you don't need to instantiate a <code class="other">Console</code>
+                object in order to use <code><span class="function">WriteLine</span>()</code>). They can be
+                <code class="keyword">public</code>, <code class="keyword">protected</code> or
+                <code class="keyword">private</code>.
             </p>
 
             <br />
