Add UML diagrams

--- a/v2/9/11/index.html
+++ b/v2/9/11/index.html
@@ -98,7 +98,8 @@
                 <code class="other">Console</code> class (you don't need to instantiate a <code class="other">Console</code>
                 object in order to use <code><span class="function">WriteLine</span>()</code>). They can be
                 <code class="keyword">public</code>, <code class="keyword">protected</code> or
-                <code class="keyword">private</code>.
+                <code class="keyword">private</code>. In C#, the <code class="keyword">static</code> keyword is added
+                <b>after the access modifier</b> to mark a method as static.
             </p>
 
             <br />
