--- a/v2/9/index.html
+++ b/v2/9/index.html
@@ -94,6 +94,12 @@
                         <p>Association</p>
                     </a>
                 </div>
+                <div class="section-flexbox">
+                    <a href="./13/" class="no-underline section-link">
+                        <h1>9.13</h1>
+                        <p>UML Diagrams</p>
+                    </a>
+                </div>
             </div>
             <div id="margin"></div>
         </div>
