--- a/v2/17/index.html
+++ b/v2/17/index.html
@@ -52,6 +52,12 @@
                         <p>Context-Free Languages</p>
                     </a>
                 </div>
+                <div class="section-flexbox">
+                    <a href="./06/" class="no-underline section-link">
+                        <h1>17.06</h1>
+                        <p>Turing Machines</p>
+                    </a>
+                </div>
             </div>
             <div id="margin"></div>
         </div>
