--- a/v2/index.html
+++ b/v2/index.html
@@ -96,10 +96,10 @@
                         <p>Data Representation <br /> <em>(in progress)</em></p>
                     </a>
                 </div>
-                <div class="section-flexbox homepage-flexbox disabled">
+                <div class="section-flexbox homepage-flexbox">
                     <a href="./12/" class="no-underline section-link">
                         <h1>Section 12</h1>
-                        <p>Hardware and Software <br /> <em>(in progress)</em></p>
+                        <p>Computer Systems <br /> <em>(in progress)</em></p>
                     </a>
                 </div>
                 <div class="section-flexbox homepage-flexbox disabled">
