Three more Computer Systems pages

--- a/v2/12/index.html
+++ b/v2/12/index.html
@@ -28,6 +28,24 @@
                         <p>Hardware and Software</p>
                     </a>
                 </div>
+                <div class="section-flexbox">
+                    <a href="./02/" class="no-underline section-link">
+                        <h1>12.02</h1>
+                        <p>The Operating System</p>
+                    </a>
+                </div>
+                <div class="section-flexbox">
+                    <a href="./03/" class="no-underline section-link">
+                        <h1>12.03</h1>
+                        <p>Utility Software</p>
+                    </a>
+                </div>
+                <div class="section-flexbox">
+                    <a href="./04/" class="no-underline section-link">
+                        <h1>12.04</h1>
+                        <p>Programming Language Classification</p>
+                    </a>
+                </div>
             </div>
             <div id="margin"></div>
         </div>
