Another two pages

--- a/v2/12/index.html
+++ b/v2/12/index.html
@@ -46,6 +46,18 @@
                         <p>Programming Language Classification</p>
                     </a>
                 </div>
+                <div class="section-flexbox">
+                    <a href="./05/" class="no-underline section-link">
+                        <h1>12.05</h1>
+                        <p>Logic Gates</p>
+                    </a>
+                </div>
+                <div class="section-flexbox">
+                    <a href="./06/" class="no-underline section-link">
+                        <h1>12.06</h1>
+                        <p>Adder Circuits</p>
+                    </a>
+                </div>
             </div>
             <div id="margin"></div>
         </div>
