--- a/v2/12/04/index.html
+++ b/v2/12/04/index.html
@@ -14,7 +14,7 @@
         <meta http-equiv="content-type" content="text/html; charset=utf-8">
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="DESCRIPTION">
+        <meta name="description" content="Learn about the difference between high-level and low-level programming languages, as well as compilers, interpreters and assemblers, for A Level Computer Science on CS.RN v2.">
     </head>
 
     <body>
