Boolean Algebra page

--- a/v2/12/06/index.html
+++ b/v2/12/06/index.html
@@ -106,6 +106,8 @@
                 <img src="./diagram2.png" style="width: 500px;" />
             </p>
 
+            <p>You only need to be able to <b>recognise</b> this circuit in the exam, <b>not draw</b> it.</p>
+
             <br />
     
             <hr />
