Start Computer Architecture section

--- a/v2/index.html
+++ b/v2/index.html
@@ -102,7 +102,7 @@
                         <p>Computer Systems <br /> <em>(in progress)</em></p>
                     </a>
                 </div>
-                <div class="section-flexbox homepage-flexbox disabled">
+                <div class="section-flexbox homepage-flexbox">
                     <a href="./13/" class="no-underline section-link">
                         <h1>Section 13</h1>
                         <p>Computer Architecture <br /> <em>(in progress)</em></p>
