--- a/v2/13/index.html
+++ b/v2/13/index.html
@@ -34,6 +34,18 @@
                         <p>System Architectures</p>
                     </a>
                 </div>
+                <div class="section-flexbox">
+                    <a href="./03/" class="no-underline section-link">
+                        <h1>13.03</h1>
+                        <p>The CPU</p>
+                    </a>
+                </div>
+                <div class="section-flexbox">
+                    <a href="./04/" class="no-underline section-link">
+                        <h1>13.04</h1>
+                        <p>The Fetch-Execute Cycle</p>
+                    </a>
+                </div>
             </div>
             <div id="margin"></div>
         </div>
