--- a/v2/13/index.html
+++ b/v2/13/index.html
@@ -46,6 +46,12 @@
                         <p>The Fetch-Execute Cycle</p>
                     </a>
                 </div>
+                <div class="section-flexbox">
+                    <a href="./05/" class="no-underline section-link">
+                        <h1>13.05</h1>
+                        <p>Assembly Language</p>
+                    </a>
+                </div>
             </div>
             <div id="margin"></div>
         </div>
