--- a/v2/index.html
+++ b/v2/index.html
@@ -132,7 +132,7 @@
                         <p>Regular Languages <br /> <em>(in progress)</em></p>
                     </a>
                 </div>
-                <div class="section-flexbox homepage-flexbox disabled">
+                <div class="section-flexbox homepage-flexbox">
                     <a href="./18/" class="no-underline section-link">
                         <h1>Section 18</h1>
                         <p>The Internet <br /> <em>(in progress)</em></p>
