Three new pages

--- a/v2/18/index.html
+++ b/v2/18/index.html
@@ -14,7 +14,7 @@
         <meta http-equiv="content-type" content="text/html; charset=utf-8">
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Study Section 18 (The Internet) on CS.RN v2, the best place to revise for your A Level Computer Science exam.">
+        <meta name="description" content="Study Section 18 (Networks) on CS.RN v2, the best place to revise for your A Level Computer Science exam.">
     </head>
 
     <body>
@@ -25,6 +25,24 @@
                 <div class="section-flexbox">
                     <a href="./01/" class="no-underline section-link">
                         <h1>18.01</h1>
+                        <p>Network Protocols</p>
+                    </a>
+                </div>
+                <div class="section-flexbox">
+                    <a href="./02/" class="no-underline section-link">
+                        <h1>18.02</h1>
+                        <p>IP Addresses</p>
+                    </a>
+                </div>
+                <div class="section-flexbox">
+                    <a href="./03/" class="no-underline section-link">
+                        <h1>18.03</h1>
+                        <p>Network Address Translation</p>
+                    </a>
+                </div>
+                <div class="section-flexbox">
+                    <a href="./04/" class="no-underline section-link">
+                        <h1>18.04</h1>
                         <p>The Internet</p>
                     </a>
                 </div>
