--- a/v2/index.html
+++ b/v2/index.html
@@ -135,7 +135,7 @@
                 <div class="section-flexbox homepage-flexbox">
                     <a href="./18/" class="no-underline section-link">
                         <h1>Section 18</h1>
-                        <p>The Internet <br /> <em>(in progress)</em></p>
+                        <p>Networks <br /> <em>(in progress)</em></p>
                     </a>
                 </div>
                 <div class="section-flexbox homepage-flexbox">
