Remove virtual memory

--- a/v1/4-12-RAM-and-ROM/index.html
+++ b/v1/4-12-RAM-and-ROM/index.html
@@ -78,7 +78,7 @@
 
         <br /> <br />
 
-        <a class="next-link" href="../4-13-Virtual-Memory/">Next: 4.13 - Virtual Memory</a>
+        <a class="next-link" href="../4-13-Magnetic-Storage/">Next: 4.13 - Magnetic Storage</a>
 
         <br /> <br />
         <br /> <br />
